# SDS-dashboard-demo

./: Intro.py  README.md  database.db  environment.yml  pyproject.toml  requirements.txt
database/: relational_schema  render_database.py
pages/: 1_DataFrame.py  2_Chatbot.py  2_Map.py  2_Query.py  3_Query.py  4_Embed.py  5_Chatbot.py  5_Query.py  6_Upload.py  Chatbot.py
