[project]
name = "llm-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "anthropic>=0.54.0",
    "langchain-core>=0.3.64",
    "langchain-openai>=0.3.22",
    "pandas>=2.3.0",
    "streamlit>=1.45.1",
    "transformers>=4.52.4",
]
